# MIRA

./: .env.example  .gitignore  .mira_config.json  ATTACK_RESPONSE_ANALYSIS.md  CLEANUP_SUMMARY.md  FIX_SUMMARY.md  INTEGRATION_STATUS.md  MODELS_LIST.md  MODEL_SELECTION_UPDATE.md  README.md  SSR_DEVELOPMENT_COMPLETE.md  TEST_ATTACK_PROMPTS_README.md  config.yaml  main.py  migrate_models.py  problem.md  pyproject.toml  requirements.txt  run_pair.py  test.md  test_gpu_selector.py  test_integration.py  test_mira.py  test_model_attack_understanding_detailed.py  test_viz.py
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  JUDGE_DESIGN.md  JUDGE_USAGE.md  PROJECT_STRUCTURE.md  RESEARCH_WORKFLOW.md  SSR_IMPLEMENTATION_SUMMARY.md  SSR_INTEGRATION_PLAN.md  SSR_USAGE.md  TECH_SUMMARY_ZH.md  VISUALIZATION_GUIDE_ZH.md
examples/: analyze_subspaces.py  full_pipeline.py  judge_combinations.py  ml_vs_keywords.py  run_attacks.py  run_interactive.py  run_live.py  run_pentest.py  run_probes.py  run_research.py  ssr_demo.py  visualize_transformer_internals.py
experiments/: analyze_pair_vs_gcg.py
mira/: .mira_config.json  __init__.py  config.py  runner.py
mira-venv/: pyvenv.cfg
mira-venv/Scripts/: activate  activate.bat
mira/analysis/: __init__.py  activation.py  attack_synergy.py  attention.py  attention_visualizer.py  comparison.py  cost_efficiency.py  cross_model_metrics.py  flow_tracer.py  logit_lens.py  model_fairness.py  multi_run_analyzer.py  phase_comparison.py  probe_visualizer.py  reverse_search.py  signature_matrix.py  subspace.py  subspace_quantification.py  transferability.py  transformer_tracer.py  (+1 more)
scripts/: cleanup_results.py
tests/: TEST_SUMMARY.md  test_4level_framework.py  test_attack_understanding.py  test_chart_generation.py  test_complete_flow.py  test_complete_pipeline.py  test_comprehensive.py  test_model_selector.py  test_real_attack_prompts.py  test_subspace.py
(+76 files in other folders)
